GifGenerator/ClientApp/src/components/Navbar.css
.nav-bar-container {
    width: 100%;
    height: 50px;
    background: #333;
    padding-left: 20px;
    padding-top: 7px;
    padding-bottom: 10px;
    position: sticky;
    top: 0;
    z-index: 2;
}

.nav-path {
    float: left;
}

.nav-actions {
    float: right;
}

.nav-icon-element{
    display: inline;
}

.nav-icon {
    color: #00bfff;
}

.nav-icon:hover {
    color: #0090ff;
}

.nav-btn {
    vertical-align: bottom;
}

